--- a/ProjectAlPhabet/ProjectAlPhabet.csproj
+++ b/ProjectAlPhabet/ProjectAlPhabet.csproj
@@ -21,4 +21,8 @@
     <Page Include="App.xaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ConsoleUtils\" />
+  </ItemGroup>
+
 </Project>
